--- a/main.html
+++ b/main.html
@@ -139,6 +139,7 @@ File: <#=item.file.path#>\r\n
 										<li>exception handeling</li>
 										<li>logs</li>
 										<li>Colour for each file</li>
+										<li>Parse date float not string</li>
 									</ul>
 								</div>
 							</div>
@@ -152,6 +153,7 @@ File: <#=item.file.path#>\r\n
 				
 				<div id="footer" class="customFooter">
 					<img src="images/replace2.png" onclick="ReLoadPage()" style="align:left" alt="Reload">
+					<img src="images/tools.png" id="nonGadgetSettings" onclick="NonGadgetSettings()" style="align:left" alt="Settings">
 					<span id="statusBar">
 					</span>
 				</div>
