Basic online version checking

--- a/main.html
+++ b/main.html
@@ -153,6 +153,9 @@ File: <#=item.file.path#>\r\n
 									<hr/>
 									Version: <span id="versionNumber"></span><br/>
 									Release Date: <span id="versionReleaseDate"></span><br/>
+									<hr/>
+									<a href="javascript:CheckForNewVersion()" id="checkForNewVersion">Check for updates<br/></a>
+									<span id="versionCheckStatus"></span><br/>
 								</div>
 							</div>							
 							
